logo alignment fix for xs

--- a/src/assets/scss/layout/_logo-section.scss
+++ b/src/assets/scss/layout/_logo-section.scss
@@ -14,6 +14,10 @@
 
   .narrow & {
     margin-left: calc(50% - 3rem);
+
+    @include media-breakpoint-only(xs) {
+      margin-left: 0;
+    }
   }
 
   .title {
